--- a/config-data/ms-venta-service.yml
+++ b/config-data/ms-venta-service.yml
@@ -4,10 +4,10 @@ server:
 
 spring:
   application:
-    name: ms-cliente-service
+    name: ms-venta-service
 
   datasource:
-    url: jdbc:mysql://localhost:3306/ms_cliente
+    url: jdbc:mysql://localhost:3306/ms_venta
     username: root
     password: ""
     driver-class-name: com.mysql.cj.jdbc.Driver
